  * raggle: beefed up OPML support - saves all configurable feed attributes
  * raggle: minor rescue cleanup
  * raggle: allow Engine to add site, image, category, etc. if given
  * raggle: added del.icio.us-style space-separated categories.  (any
    regex word boundary will work, including the old commas.  space default)
  * raggle: OPML import now uses Engine::add_feed.  more modular and skips
    adding duplicate feeds

* Fri Dec 31 16:40:00 2004, redshift <redshift@halffull.org>
  * raggle: added Ncurses-mode OPML import/export via the 'O' key.  If the
    given string is an existing file or URI, import; otherwise, export to
    a new file with the given name.
  * raggle: added uri? method to check if a string is a URI
  * raggle: cleaned up OPML import/export code
  * raggle: don't auto-bail on OPML errors if in Ncurses mode
  * raggle: fixed opening of URIs with user/pass
  * raggle: miscellaneous cleanup/typos
  * raggle.pod: added 'O' documentation, cleaned up OPML stuff
  * raggle.1: regenerated from raggle.pod

* Mon Jan 03 10:40:00 2005, redshift <redshift@halffull.org>
  * raggle: fixed bug where finding next/prev item would be jumpy because
    of re-selecting feed
  * raggle: fixed several crash bugs relating to navigation with an empty
    feed list
  * raggle: fixed several crash bugs for operations on empty feed list
  * raggle: deleting all feeds will now clear stagnant info from item and
    description windows
  * raggle: fixed bugs with closing edit/help windows
  * raggle: fixed view_source - no need to select items, should just
    always redraw description.  now works from any window
  * raggle: remove delete_item from TextWindow - holdover from ListWindow
  * raggle: rename move_item_{up,down} to move_feed_{up,down}, unless we
    add item movement

* Wed Jan 05 10:48:00 2005, redshift <redshift@halffull.org>
  * raggle: added feed delete confirmation
  * TODO: removed feed delete confirmation